--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  provider: ^3.2.0
+  flutter_auth_buttons: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +41,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/logo.png
+
+  fonts:
+    - family: Bebas
+      fonts:
+        - asset: assets/BebasNeue-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
