--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^3.2.0
   flutter_auth_buttons: ^0.6.0
+  font_awesome_flutter: ^8.5.0
+  image_picker: ^0.6.2+1
+  firebase_auth: ^0.15.1
+  google_sign_in: ^4.0.14
+  cloud_firestore: ^0.12.11
+  firebase_storage: ^3.0.8
 
 dev_dependencies:
   flutter_test:
