--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_sign_in: ^4.0.14
   cloud_firestore: ^0.12.11
   firebase_storage: ^3.0.8
+  shared_preferences: ^0.5.4+8
+  cached_network_image: ^1.1.3
 
 dev_dependencies:
   flutter_test:
