--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,18 @@ dependencies:
   firebase_storage: ^3.0.8
   shared_preferences: ^0.5.4+8
   cached_network_image: ^1.1.3
+  google_maps_flutter: ^0.5.11+1
+  geoflutterfire: ^2.0.3+2
+  location: ^2.3.5
+  google_maps_webservice: ^0.0.16
+  http: ^0.12.0+2
+  uuid: ^2.0.4
+  geolocator: ^5.1.5
+  flutter_google_places: ^0.2.3
+  flutter_spinkit: ^4.1.0
+  get_it: ^3.0.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +64,7 @@ flutter:
 
   assets:
     - assets/logo.png
+    - assets/marker.png
 
   fonts:
     - family: Bebas
