--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_google_places: ^0.2.3
   flutter_spinkit: ^4.1.0
   get_it: ^3.0.3
-
+  fluttie: ^0.5.0
 
 
 dev_dependencies:
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/logo.png
     - assets/marker.png
+    - assets/loader_engrane.json
 
   fonts:
     - family: Bebas
