--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   flutter_auth_buttons: ^0.6.0
   font_awesome_flutter: ^8.5.0
   image_picker: ^0.6.2+3
-  firebase_auth: ^0.15.2
+  firebase_auth: 0.15.3+1
   google_sign_in: ^4.1.0
   cloud_firestore: ^0.13.0+1
-  firebase_storage: ^3.1.0
+  firebase_storage: ^3.1.1
   shared_preferences: ^0.5.6
   cached_network_image: ^1.1.3
   google_maps_flutter: ^0.5.11+1
@@ -41,9 +41,18 @@ dependencies:
   flutter_google_places: ^0.2.3
   flutter_spinkit: ^4.1.0
   get_it: ^3.0.3
-  fluttie: ^0.5.0
   flutter_facebook_login: ^3.0.0
   http: ^0.12.0+2
+  flutter_polyline_points: ^0.1.0
+  carousel_slider: ^1.4.1
+  flutter_launcher_icons: ^0.7.4
+  flutter_rating_bar: ^3.0.1+1
+  sliding_up_panel: ^1.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +75,9 @@ flutter:
     - assets/marker.png
     - assets/loader_engrane.json
     - assets/taxo.png
+    - assets/taxiApp.png
+    - assets/marker_car.png
+    - assets/marker_taxi.png
 
   fonts:
     - family: Bebas
