--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   double_back_to_close_app: ^0.1.2
   permission_handler: ^4.4.0
   introduction_screen: ^1.0.8
-  fab_circular_menu: ^0.1.5
+  popup_menu: ^1.0.5
+  animated_text_kit: ^2.0.0
 
 flutter_icons:
   android: true
@@ -101,6 +102,9 @@ flutter:
     - assets/sitios.png
     - assets/aceptado.png
     - assets/iniciado.png
+    - assets/marker_origen.png
+    - assets/destino1.png
+    - assets/origen1.png
 
   fonts:
     - family: Bebas
